pkg/plugins/policies/meshpassthrough/plugin/v1alpha1/testdata/simple.listener.matcher-api.golden.yaml
resources:
- name: outbound:passthrough:ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15001
    filterChainMatcher:
      matcherTree:
        exactMatchMap:
          map:
            raw_buffer:
              matcher:
                matcherTree:
                  exactMatchMap:
                    map:
                      h2c:
                        matcher:
                          matcherTree:
                            exactMatchMap:
                              map:
                                "80":
                                  action:
                                    name: meshpassthrough_http_80
                                    typedConfig:
                                      '@type': type.googleapis.com/google.protobuf.StringValue
                                      value: meshpassthrough_http_80
                            input:
                              name: envoy.matching.inputs.destination_port
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      http/1.1:
                        matcher:
                          matcherTree:
                            exactMatchMap:
                              map:
                                "80":
                                  action:
                                    name: meshpassthrough_http_80
                                    typedConfig:
                                      '@type': type.googleapis.com/google.protobuf.StringValue
                                      value: meshpassthrough_http_80
                            input:
                              name: envoy.matching.inputs.destination_port
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                  input:
                    name: envoy.matching.inputs.application_protocol
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
                onNoMatch:
                  matcher:
                    matcherList:
                      matchers:
                      - onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "80":
                                    action:
                                      name: meshpassthrough_tcp_192.168.0.0_80
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tcp_192.168.0.0_80
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                        predicate:
                          singlePredicate:
                            customMatch:
                              name: envoy.matching.matchers.ip
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                cidrRanges:
                                - addressPrefix: 192.168.0.0
                                  prefixLen: 32
                                statPrefix: meshpassthrough_tcp_192.168.0.0_80
                            input:
                              name: envoy.matching.inputs.destination_ip
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
        input:
          name: envoy.matching.inputs.transport_protocol
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tcp_192.168.0.0_80
          statPrefix: meshpassthrough_tcp_192_168_0_0_80
      name: meshpassthrough_tcp_192.168.0.0_80
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - api.example.com
              - api.example.com:80
              name: api.example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_api.example.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: outbound:passthrough:ipv4
    trafficDirection: OUTBOUND
- name: outbound:passthrough:ipv6
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: '::'
        portValue: 15001
    filterChainMatcher:
      matcherTree:
        exactMatchMap:
          map:
            raw_buffer:
              matcher:
                matcherTree:
                  exactMatchMap:
                    map:
                      h2c:
                        matcher:
                          matcherTree:
                            exactMatchMap:
                              map:
                                "80":
                                  action:
                                    name: meshpassthrough_http_80
                                    typedConfig:
                                      '@type': type.googleapis.com/google.protobuf.StringValue
                                      value: meshpassthrough_http_80
                            input:
                              name: envoy.matching.inputs.destination_port
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      http/1.1:
                        matcher:
                          matcherTree:
                            exactMatchMap:
                              map:
                                "80":
                                  action:
                                    name: meshpassthrough_http_80
                                    typedConfig:
                                      '@type': type.googleapis.com/google.protobuf.StringValue
                                      value: meshpassthrough_http_80
                            input:
                              name: envoy.matching.inputs.destination_port
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                  input:
                    name: envoy.matching.inputs.application_protocol
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput
        input:
          name: envoy.matching.inputs.transport_protocol
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - api.example.com
              - api.example.com:80
              name: api.example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_api.example.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: outbound:passthrough:ipv6
    trafficDirection: OUTBOUND
